# oidc-flask-server

./: .env.sample  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  start.sh  waitress_run.py  wsgi.py
src/openid_server/: __init__.py  email.py  models.py  paths.py  security.py  settings.py  types.py  utils.py
src/openid_server/migrations/: env.py
src/openid_server/migrations/versions/: 271dd553e57e_add_post_logout_redirect_uris_field.py  ca4d1efb09ef_initial_migration.py
src/openid_server/static/css/: style.css
src/openid_server/templates/: auth.html  base.html  docs.html  error.html
src/openid_server/templates/admin/: index.html  keys.html  user_edit.html  users.html
src/openid_server/templates/app/: edit_app.html  index.html  new_app.html
src/openid_server/templates/emails/: base.html  verify_email.html
src/openid_server/templates/macros/: inputs.html  tabs.html
src/openid_server/templates/partials/: _flashes.html
src/openid_server/templates/user/: change_password.html  edit_user.html  email_verified.html  index.html  login.html  sign_up.html
src/openid_server/views/: __init__.py  admin.py  api.py  client.py  frontend.py  user.py
src/openid_server/views/forms/: __init__.py  admin.py  forms.py  utils.py
